# nlaProject

./: CMakeLists.txt  README.md  examples.cpp  examples.hpp  givens_matrix.hpp  main.cpp  nebula.hpp  nla_mat.hpp  qr_iteration.hpp
nla_headers/: givens_matrix.cpp  givens_matrix.hpp  nla_mat.hpp  qr_iteration.cpp  qr_iteration.hpp  qr_iteration_for_tridiag.cpp  qr_iteration_for_tridiag.hpp  tridiag_matrix.cpp  tridiag_matrix.hpp  utils.cpp  utils.hpp
